<resources>
    <string name="app_name">Ogima</string>
    <string name="title_chat">Chat</string>
    <string name="title_transacao">Transações</string>
    <string name="title_notifications">Atividades</string>
    <string name="title_perfil">Perfil</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="text_senha">Senha</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titulo_app">Ogima</string>
    <string name="REMETENTE" translatable="false">*****@gmail.com</string>
    <string name="SENREMETENTE" translatable="false">*********</string>
    <string name="menu_home">Home</string>
    <string name="menu_inicio">Inicio</string>
    <string name="menu_atividades">Notificações</string>
    <string name="menu_viewPerfil">Exibições no Perfil</string>
    <string name="menu_stickers">Stickers</string>
    <string name="menu_assinatura">Assinatura</string>
    <string name="menu_musica">Música</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_faq">FaqActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="introd_um_titulo">Bem-vindo</string>
    <string name="hintSearchViewPeople">Pesquisar usuário por nome</string>
    <string name="title_activity_teste_tensor">TesteTensorActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="desc_ui_login">Join this new community</string>
    <string name="login_email">Sign in with email</string>
    <string name="login_google">Sign in with Google</string>
    <string name="account_not_registered">Account not yet registered</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="no_account">Don\'t have an account yet? Create now</string>
    <string name="welcome_login">Welcome Back</string>
    <string name="account_problem">Account problem?</string>
    <string name="login_filling_notice">You must enter your email and password to proceed with login</string>
    <string name="account_does_not_exist">Account does not exist</string>
    <string name="email_and_password_do_not_match">Email and password do not match a registered user</string>
    <string name="error_login_with_email">Error logging in user</string>
    <string name="successful_sign_in">Successful sign in</string>
    <string name="unregistered_account">Unregistered account</string>
    <string name="register_with_email">Register with email</string>
    <string name="register_with_google">Register with Google</string>
    <string name="have_an_account">Already have an account</string>
    <string name="registration_error">Error when registering</string>
    <string name="account_already_registered">This account has already been registered</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="invalid_email">Enter a valid email, please!</string>
    <string name="register_filling_notice">You must enter your email and password to proceed with sign up</string>
    <string name="registered_successfully">Registered successfully</string>
    <string name="password_exception">Enter a stronger password!</string>
    <string name="invalid_credential_exception">Enter a valid email address</string>
    <string name="collision_exception">This account has already been registered</string>
    <string name="error_in_registration">Error when registering</string>
    <string name="agree_to_the_terms">By clicking continue you agree to our terms.</string>
    <string name="subtitle_terms">Read our:</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="title_cookie_policy">Cookie Policy</string>
    <string name="continue_message">Continue</string>
    <string name="login_problem_information">Still having problems? SEE FAQ</string>
    <string name="email">Email</string>
    <string name="sms">SMS</string>
    <string name="retrieve_account">Retrieve Account</string>
    <string name="provide_your_email">Provide your email</string>
    <string name="email_linked_to_account">Email linked to account:</string>
    <string name="localized_account">Account located successfully!</string>
    <string name="email_not_found">No account matches the email provided</string>
    <string name="error_finding_account">An error occurred while locating your account:</string>
    <string name="limit_of_attempts_reached">You have already reached the recovery attempt limit, please try again in:</string>
    <string name="an_error_has_occurred">An error has occurred:</string>
    <string name="email_sent">Link to reset password sent to:</string>
    <string name="error_sending_reset_link">An error occurred while sending the password reset link, please try again</string>
    <string name="connection_error_occurred">A connection error occurred:</string>
    <string name="wait">Wait</string>
    <string name="seconds_sending_email">seconds to send another email</string>
    <string name="provide_your_number">Provide your phone number</string>
    <string name="linked_phone_number">Phone number</string>
    <string name="phone_number_not_found">No account matches the phone number provided</string>
    <string name="invalid_phone_number_format">Please enter your phone number in a valid format</string>
    <string name="title_check_your_account">Verify your account</string>
    <string name="subtitle_check_email">Confirm your account via email sent to:</string>
    <string name="send_email_verification_link">Link not arrived? Send again</string>
    <string name="note_email_verification">If the email has not arrived in your inbox, check your junk email</string>
    <string name="verified_account">Verified account</string>
    <string name="verification_link_sent">Verification link sent to your email</string>
    <string name="email_not_verified">Email has not yet been verified</string>
    <string name="error_sending_verification_link">Error sending verification link</string>
    <string name="name_registration_title">What is\nyour name?</string>
    <string name="name_registration_subtitle">This will be your name that will be displayed on your profile, it can be changed later</string>
    <string name="name_registration_info">Your name</string>
    <string name="changed_name">Name changed successfully</string>
    <string name="character_limit_reached">Character limit not allowed, it must be between %1$d-%2$d</string>
    <string name="age_registration_title">What is your date of birth?</string>
    <string name="age_registration_subtitle">Your age will not be displayed</string>
    <string name="date_format">yyyy/mm/dd</string>
    <string name="minimum_age_limit_for_registration">Registration is only possible for people over %1$d years old</string>
    <string name="invalid_date">Please enter a valid date</string>
    <string name="gender_registration_title">Your gender:</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="other">Other</string>
    <string name="changed_gender">Successfully changed gender</string>
    <string name="title_registration_of_interests">Select your interests:</string>
    <string name="subtitle_registration_of_interests">Your interests will be displayed on your profile</string>
    <string-array name="interests_array">
        <item>Anime</item>
        <item>Cosplay</item>
        <item>Reading</item>
        <item>Movies</item>
        <item>Sports</item>
        <item>Crafts</item>
        <item>Photography</item>
        <item>Cooking</item>
        <item>Travel</item>
        <item>Music</item>
        <item>Dance</item>
        <item>Theater</item>
        <item>Games</item>
        <item>Animals</item>
        <item>Fashion</item>
        <item>Beauty</item>
        <item>Radical Sports</item>
        <item>Science</item>
        <item>Politics</item>
        <item>History</item>
        <item>Geography</item>
        <item>Languages</item>
        <item>Technology</item>
        <item>Nature</item>
        <item>Philosophy</item>
        <item>Religion</item>
        <item>Medicine</item>
        <item>Education</item>
        <item>Business</item>
        <item>Marketing</item>
        <item>Architecture</item>
        <item>Design</item>
    </string-array>
    <string name="changed_interests">Interests updated successfully</string>
    <string name="minimum_threshold_of_interests">It is necessary to select %1$d interests to proceed with registration</string>
    <string name="title_registration_of_epilepsy">You have epilepsy?</string>
    <string name="subtitle_registration_of_epilepsy">Select YES if you have epilepsy, we will do our best to make your experience with the app completely safe, if you do not have epilepsy select NO so we can add the gifs feature to your account</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="choose_epilepsy">Selected %1$s for epilepsy</string>
    <string name="confirm_epilepsy_choice">Do you really confirm your choice? Once selected, there is no way to change</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <plurals name="unsubscribe">
        <item quantity="one">You need to press %d more time to exit registration</item>
        <item quantity="other">You need to press %d more times to exit registration</item>
    </plurals>
    <string name="error_in_registration_cad">An error occurred while registering, please try again</string>
    <string name="select_user_photo">Select your profile photo:</string>
    <string name="select_user_background">Select your profile background:</string>
    <string name="saved_successfully">Saved successfully</string>
    <string name="successfully_changed">Successfully changed</string>
    <string name="registration_completed">Registration completed successfully, welcome!</string>
    <string name="deleted_photo">Photo deleted successfully</string>
    <string name="deleted_profile_background">Successfully deleted profile background</string>
    <string name="error_loading_user_photo">There was an error loading your photo</string>
    <string name="error_loading_user_background">An error occurred while loading your profile background</string>
    <string name="error_loading_gif">An error occurred while loading the selected gif</string>
    <string name="error_saving_gif">An error occurred while saving your gif</string>
    <string name="error_saving_photo">An error occurred while saving your photo</string>
    <string name="error_saving_user_background">An error occurred while saving your profile background</string>
    <string name="photo_user_alert_dialog_title">Do you really want to proceed without choosing your profile photo and profile background?</string>
    <string name="public_group">Public Group</string>
    <string name="private_group">Private Group</string>
    <string name="choose_an_option">Choose an option:</string>
</resources>