<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/estilo_login_email">


    <ImageView
        android:id="@+id/imgViewUITermos"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="@dimen/_280sdp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/fundoogima" />

    <TextView
        android:id="@+id/txtViewInfoTermos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/imgViewUITermos"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center"
        android:textSize="@dimen/_20ssp"
        android:text="@string/agree_to_the_terms"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/txtViewSubTitleTermo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_caixa_texto"
        android:backgroundTint="#DAD8D8"
        android:gravity="center"
        android:paddingTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_8sdp"
        android:text="@string/subtitle_terms"
        android:layout_below="@id/txtViewInfoTermos"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_20ssp" />

    <TextView
        android:id="@+id/txtViewTilePrivacidade"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewSubTitleTermo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/title_privacy_policy"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_18ssp" />

    <TextView
        android:id="@+id/txtViewTitleCookies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewTilePrivacidade"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:text="@string/title_cookie_policy"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_18ssp" />

    <Button
        android:id="@+id/btnIrParaCadastro"
        android:layout_width="@dimen/_280sdp"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewTitleCookies"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_12sdp"
        android:background="@drawable/estilo_button_login"
        android:paddingTop="@dimen/_12sdp"
        android:paddingBottom="@dimen/_12sdp"
        android:text="@string/continue_message"
        android:textAllCaps="false"
        android:textSize="@dimen/_18ssp" />

</RelativeLayout>