<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/txtViewTitleEpilepsia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:gravity="center"
        android:textSize="@dimen/_30ssp"
        android:textColor="@android:color/black"
        android:text="@string/title_registration_of_epilepsy" />

    <TextView
        android:id="@+id/txtViewSubTitleEpilepsia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewTitleEpilepsia"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:paddingStart="@dimen/_8sdp"
        android:paddingLeft="@dimen/_8sdp"
        android:paddingRight="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        android:gravity="start|left"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="@dimen/_15ssp"
        android:text="@string/subtitle_registration_of_epilepsy" />

    <Button
        android:id="@+id/btnSimEpilepsia"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@id/txtViewSubTitleEpilepsia"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_50sdp"
        android:background="@drawable/background_button_entrar"
        android:backgroundTint="#65000000"
        android:fontFamily="@font/andada"
        android:text="@string/yes"
        android:textAllCaps="true"
        android:textColor="#9E000000"
        android:textSize="@dimen/_15ssp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnNaoEpilepsia"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@id/btnSimEpilepsia"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@drawable/background_button_entrar"
        android:backgroundTint="#65000000"
        android:fontFamily="@font/andada"
        android:text="@string/no"
        android:textAllCaps="true"
        android:textColor="#9E000000"
        android:textSize="@dimen/_15ssp"
        android:visibility="visible" />

    <include
        layout="@layout/inc_fab_next_parc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnNaoEpilepsia"
        android:layout_marginTop="@dimen/_40sdp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"/>

</RelativeLayout>