<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:id="@+id/imgViewBackgroundLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ilustration_ui_login_email_v3" />

    <TextView
        android:id="@+id/txtTitleLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/_180sdp"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/background_caixa_texto"
        android:backgroundTint="#182159"
        android:gravity="center"
        android:text="@string/welcome_login"
        android:fontFamily="@font/andada"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_22ssp" />

    <EditText
        android:id="@+id/edtTxtLoginEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@id/txtTitleLoginEmail"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_caixa_texto"
        android:gravity="center|start"
        android:backgroundTint="#9F9E9E"
        android:hint="@string/email"
        android:fontFamily="@font/andada"
        android:textSize="@dimen/_20ssp"
        android:padding="@dimen/_8sdp"
        android:textColor="@android:color/white"
        android:textColorHint="#DD000000"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edtTxtLoginPass"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@id/edtTxtLoginEmail"
        android:layout_marginTop="@dimen/_18sdp"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:background="@drawable/background_caixa_texto"
        android:gravity="center|start"
        android:backgroundTint="#9F9E9E"
        android:hint="@string/password"
        android:fontFamily="@font/andada"
        android:textSize="@dimen/_20ssp"
        android:padding="@dimen/_8sdp"
        android:textColor="@android:color/white"
        android:textColorHint="#DD000000"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/btnSignInEmail"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_below="@id/edtTxtLoginPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:background="@drawable/background_button_entrar"
        android:backgroundTint="#117DDC"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_15ssp" />

    <Button
        android:id="@+id/btnNoAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_8sdp"
        android:layout_below="@id/btnSignInEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:layout_marginRight="@dimen/_12sdp"
        android:background="@drawable/background_caixa_texto"
        android:backgroundTint="@android:color/black"
        android:text="@string/no_account"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_18ssp"/>

    <Button
        android:id="@+id/btnAccountProblem"
        android:layout_width="@dimen/_220sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_8sdp"
        android:background="@drawable/background_caixa_texto"
        android:backgroundTint="#959090"
        android:padding="@dimen/_8sdp"
        android:text="@string/account_problem"
        android:textAllCaps="false"
        android:textColor="#E91E63"
        android:textSize="@dimen/_17ssp"/>

    <ProgressBar
        android:id="@+id/progressBarLogin"
        android:layout_width="@dimen/_45sdp"
        android:layout_height="@dimen/_45sdp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        style="?android:attr/progressBarStyle"
        android:layout_alignTop="@id/edtTxtLoginEmail"
        android:layout_alignBottom="@id/edtTxtLoginEmail"
        android:visibility="gone"/>
</RelativeLayout>