<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtViewTitleIdadeCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_55sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:gravity="start|center_horizontal"
        android:text="@string/age_registration_title"
        android:textColor="#000000"
        android:textSize="@dimen/_30ssp" />

    <TextView
        android:id="@+id/txtViewInfoIdadeCad"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewTitleIdadeCad"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/_4sdp"
        android:layout_margin="@dimen/_8sdp"
        android:text="@string/age_registration_subtitle"
        android:gravity="start|left"
        android:textSize="@dimen/_14ssp" />

    <TextView
        android:id="@+id/txtViewDataCad"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_48sdp"
        android:layout_below="@id/txtViewInfoIdadeCad"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:layout_marginStart="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:background="@drawable/backtextblack"
        android:hint="@string/date_format"
        android:textSize="@dimen/_22ssp" />

    <include
        layout="@layout/inc_fab_next_parc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/txtViewDataCad"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="@dimen/_18sdp" />
</RelativeLayout>